--- a/ERestaurant/ERestaurant.WebApp/Views/Menus/Index.cshtml
+++ b/ERestaurant/ERestaurant.WebApp/Views/Menus/Index.cshtml
@@ -13,19 +13,25 @@
 <table class="table"> 
     <tr> 
         <th> 
-            @Html.DisplayNameFor(model => model.RestaurantName) 
+            @Html.DisplayNameFor(model => model.RestaurantId) 
         </th> 
-        <th></th> 
+        <th>
+            @Html.DisplayNameFor(model => model.TypeEnum)
+        </th>
+        <th></th>
     </tr> 
 @foreach (var item in Model) { 
     <tr> 
         <td> 
-            @Html.DisplayFor(modelItem => item.RestaurantName) 
-        </td> 
+            @Html.DisplayFor(modelItem => item.RestaurantId) 
+        </td>
+        <td>
+            @Html.DisplayFor(model => item.TypeEnum)
+        </td>
         <td> 
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) | 
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) | 
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id }) 
+            @Html.ActionLink("Edit", "Edit", new { id=item.MenuId }) | 
+            @Html.ActionLink("Details", "Details", new { id=item.MenuId }) | 
+            @Html.ActionLink("Delete", "Delete", new { id=item.MenuId }) 
         </td> 
     </tr> 
 }
